<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bj"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/logtop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/user_login_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@mipmap/user_name"
                    android:drawablePadding="@dimen/size_5dp"
                    android:hint="@string/user_name_text"
                    android:paddingLeft="@dimen/dimen_10"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/user_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_20dp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@mipmap/pass_word"
                    android:drawablePadding="@dimen/size_5dp"
                    android:hint="@string/pass_word_text"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dimens_10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/isremenber_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:padding="@dimen/size_5dp"
                    android:text="@string/remenber_pass_text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </RelativeLayout>

            <Button
                android:id="@+id/user_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_selector"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ipconfig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip_config"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:autoLink="all"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/quit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quit2"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:autoLink="all"
                    />
                <TextView
                    android:id="@+id/properties"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/properties"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:autoLink="all"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
