<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <include
        android:id="@+id/title_id"
        layout="@layout/title_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"></include>

    <ScrollView
        android:id="@+id/scrollview_id"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_corner_bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/item_text"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <TextView
                        android:id="@+id/item_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@mipmap/ic_more"
                        android:background="@drawable/editsharp"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/description_text"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <EditText
                        android:id="@+id/description_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:background="@drawable/editsharp"
                        android:gravity="right"
                        android:hint="@string/have_not_data"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/linetype_text"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <TextView
                        android:id="@+id/linetype_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@mipmap/ic_more"
                        android:background="@drawable/editsharp"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/location_text2"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <TextView
                        android:id="@+id/location_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@mipmap/ic_more"
                        android:background="@drawable/editsharp"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/issueto_text"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <TextView
                        android:id="@+id/issueto_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@mipmap/ic_more"
                        android:background="@drawable/editsharp"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/restype_text"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <TextView
                        android:id="@+id/restype_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@mipmap/ic_more"
                        android:background="@drawable/editsharp"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/quantity_text2"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <EditText
                        android:id="@+id/quantity_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:inputType="number"
                        android:background="@drawable/editsharp"
                        android:gravity="right"
                        android:hint="@string/have_not_data"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/storelocsite_text"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <TextView
                        android:id="@+id/storelocsite_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@mipmap/ic_more"
                        android:background="@drawable/editsharp"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/unitcost_text"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <EditText
                        android:id="@+id/unitcost_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:inputType="number"
                        android:background="@drawable/editsharp"
                        android:gravity="right"
                        android:hint="@string/have_not_data"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/size_5dp">

                    <TextView
                        android:layout_width="@dimen/dimens_80dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/orderunit_text"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/dimens_16sp" />

                    <TextView
                        android:id="@+id/orderunit_text_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:drawableRight="@mipmap/ic_more"
                        android:background="@drawable/editsharp"
                        android:gravity="center_vertical"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
